# librs232

./: .clang_complete  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  README.md  TODO  appveyor.yml  autogen.sh  build.sh  configure.ac  configure.in  lakeconfig.lua  lakefile  luars232-scm-0.rockspec
.appveyor/: install.bat  install_com0com.bat
.travis/: setup_lua.sh
bindings/: Makefile.am
bindings/lua/: Makefile.am  luars232.c  rs232.lua  rs232_lua.c  test.lua
bindings/lua/examples/: at.lua
bindings/lua/test/: test.lua  test_app.bat  test_gc.lua  test_socat.lua  testcli.lua  testsrv.lua  testsrv_rs232.lua  utestcli.lua  utestcli_rs232.lua  utils.lua
cmake/: CPackConfig.cmake  DefineOptions.cmake
cmake/toolchains/: linux-mingw.cmake  poky.cmake
doc/: example.lua
include/: CMakeLists.txt  Makefile.am
include/librs232/: CMakeLists.txt  Makefile.am  log.h  qrs232.h  rs232.h  rs232_linux.h  rs232_posix.h  rs232_private.h  rs232_windows.h  timer.h  version.h.cmake
rockspecs/: rs232-0.1.0-1.rockspec  rs232-scm-0.rockspec
scripts/: build_win_mingw.bat  build_win_vs2k10.bat
src/: CMakeLists.txt  Makefile.am  librs232.pc.cmake  librs232.pc.in  librs232.rc.cmake  log.c  qrs232.cpp  resource.rc  resource_lua.rc  rs232.c  rs232_linux.c  rs232_posix.c  rs232_test.c  rs232_windows.c  timer.c
src/bindings/: CMakeLists.txt
src/bindings/lua/: CMakeLists.txt  luars232.c  luars232.rc.cmake
tests/: CMakeLists.txt  test-basic.c
tests/cmocka/: CMakeLists.txt  test-basic.c
tests/cram/: CMakeLists.txt  lua-basic.t  lua-hw-basic.t
wince/: librs232lua.vcproj
windows/vs2k5/librs232/: librs232.vcproj
windows/vs2k5/librs232lua/: librs232lua.vcproj
windows/vs2k5/test/: test.vcproj
windows/vs2k8/: librs232.sln
windows/vs2k8/librs232/: librs232.vcproj
windows/vs2k8/librs232lua/: librs232lua.vcproj
windows/vs2k8/test/: test.vcproj
